tests/errors/parser/cell-missing-semi.expect
---CODE---
1
---STDERR---
Error: Calyx Parser:  --> 4:5
  |
4 |     h = std_reg(32)
5 |     l = std_reg(32);âŠ
  |     ^
  |
  = Declaration is missing `;`
